--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,13 @@
 </head>
 <body>
 <a href="https://github.com/wroniasty/bigredbutton"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 {% block content %}
 {% endblock content %}
 </body>
