--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,11 @@
     <title>BIG RED BUTTON!</title>
 </head>
 <body>
+
+{% if user.is_authenticated %}
+{{user.first_name}} {{user.last_name}} &lt;{{user.email}}&gt; <a href="{% url logout %}">Logout</a>
+<hr/>
+{% endif %}
 <a href="https://github.com/wroniasty/bigredbutton"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 {% if messages %}
     <ul class="messages">
